--- a/18_Intro_to_Exception/.project
+++ b/18_Intro_to_Exception/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>18_Exceptional Handling</name>
+	<name>18_Intro_to_Exception</name>
 	<comment></comment>
 	<projects>
 	</projects>
